--- a/AI-Fitness-Chatbot-master/Frontend/aichatbot/package.json
+++ b/AI-Fitness-Chatbot-master/Frontend/aichatbot/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
     "react-shimmer-effects": "^1.0.3",
+    "styled-components": "^6.1.16",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
