--- a/AI-Fitness-Chatbot-master/Backend/.env
+++ b/AI-Fitness-Chatbot-master/Backend/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://AI_CHATBOT:Prajwal%40123@cluster0.b4syi.mongodb.net/?ret
 
 BEARER_TOKEN= AIzaSyCyn_pdjCXvqk6oslC58CPwTFOLBIeY2jQ
 
-
+PORT = 5000
